@@ -1,3 +1,12 @@
+2007-01-12  Ross Burton  <ross@burtonini.com>
+
+	* src/e-sexp.c:
+	* src/parser.[ch]:
+	* src/devilspie.c:
+	* README:
+	Handle multiple expressions in a single file! Yay! Patch from Lars
+	Damerow <lars@pixar.com>.
+
 2007-01-08  Ross Burton  <ross@burtonini.com>
 
 	* devilspie.1:
